--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,12 @@ html, body {
 	background-color: #282828;
 	bottom: 0;
 	position: fixed;
-	min-width: 650px;
+	min-width: 620px;
 }
 
 #nowPlayingBar {
 	display: flex;
-	height: 90px;
+	height: 78px;
 	padding: 16px;
 	box-sizing: border-box;
 }
@@ -140,4 +140,59 @@ html, body {
 
 .volumeBar .progressBar {
 	width: 125px;
+}
+
+#topContainer {
+	min-height: 100%;
+	width: 100%;
+}
+
+#topContainer #navbarContainer {
+	background-color: #000;
+	width: 220px;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.navbar {
+	padding: 25px;
+    display: flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+}
+
+.logo img {
+	width: 52px;
+	height: 52px;
+	border-radius: 50%;
+}
+
+.navbar .group {
+	border-top: 1px solid #a0a0a0;
+}
+
+.navItem {
+	padding: 10px 0px;
+    font-size: 16px;
+    font-weight: 700;
+    display: block;
+    letter-spacing: 1px;
+}
+
+.navItemLink {
+	color: #a0a0a0;
+	text-decoration: none;
+}
+
+.navItemLink:hover {
+	color: #ffffff;
+}
+.search-icon {
+	position: relative;
+	right: 0;
+	top: 0;
+	width: 25px;
+	float: right;
 }
